src/objects/GetFurther_Session__c.object
<CustomObject>
    <fields>
        <fullName>Any_Further_Comments__c</fullName>
        <description>If you have any further comments you would like to make, please leave them here:</description>
        <label>Any Further Comments?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AttendancePercentage__c</fullName>
        <formula>TotalStudentAttendances__c /  TotalStudents__c</formula>
        <inlineHelpText>Percentage attendance of students for this session</inlineHelpText>
        <label>Attendance Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CollegeCampusName__c</fullName>
        <formula>Programme__r.College__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>College/Campus Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_level__c</fullName>
        <label>Curriculum level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subject__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher</fullName>
                </value>
                <value>
                    <fullName>Lower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateValue__c</fullName>
        <formula>DATEVALUE( Session_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>GetFurther_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegisterLink__c</fullName>
        <formula>&quot;Click Here&quot;</formula>
        <label>Register Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisterSubmitted__c</fullName>
        <inlineHelpText>The date the register was completed</inlineHelpText>
        <label>Register Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Room_Number_Name__c</fullName>
        <label>Room Number/Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionLink__c</fullName>
        <formula>HYPERLINK(&apos;https://developib-getfurther.cs127.force.com/GetFurther/s/session/&apos;&amp;Id, Name)</formula>
        <label>Session Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionToday__c</fullName>
        <formula>DATEVALUE( Session_Date__c )=TODAY()</formula>
        <label>SessionToday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SessionTutorContactID__c</fullName>
        <formula>SessionTutor__r.Contact__c</formula>
        <label>SessionTutorContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionTutorName__c</fullName>
        <formula>SessionTutor__r.Contact__r.FirstName</formula>
        <label>Session Tutor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionTutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Tutor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The tutor you select must have an Engagement record linked to the session&apos;s Tuition Group. Please create an Engagement for the tutor first before selecting them as the session tutor.</errorMessage>
            <filterItems>
                <field>Engagement__c.Group__c</field>
                <operation>equals</operation>
                <valueField>$Source.TuitionGroup__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SessionYesterday__c</fullName>
        <formula>DATEVALUE( Session_Date__c ) = (TODAY()-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SessionYesterday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Delivered__c</fullName>
        <inlineHelpText>The current status of the session&apos;s delivery</inlineHelpText>
        <label>Session Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_1_End_Date__c</fullName>
        <formula>Programme__r.Term_1_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term 1 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_1_Start_Date__c</fullName>
        <formula>Programme__r.Term_1_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term 1 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_2_End_Date__c</fullName>
        <formula>Programme__r.Term_2_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term 2 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_2_Start_Date__c</fullName>
        <formula>Programme__r.Term_2_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term 2 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_3_End_Date__c</fullName>
        <formula>Programme__r.Term_3_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term 3 End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_3_Start_Date__c</fullName>
        <formula>Programme__r.Term_3_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term 3 Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalStudentAttendances__c</fullName>
        <inlineHelpText>The total number of students marked as &apos;attended&apos; or &apos;late&apos;</inlineHelpText>
        <label>Total Student Attendances</label>
        <summaryFilterItems>
            <field>Attendee__c.Type__c</field>
            <operation>equals</operation>
            <value>Student</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendee__c.Status__c</field>
            <operation>equals</operation>
            <value>Attended, Late</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.GetFurther_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalStudents__c</fullName>
        <label>Total Students</label>
        <summaryFilterItems>
            <field>Attendee__c.Type__c</field>
            <operation>equals</operation>
            <value>Student</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendee__c.GetFurther_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TuitionGroup__c</fullName>
        <inlineHelpText>The tuition group for which this session is being run</inlineHelpText>
        <label>Tuition Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TutorEmailPopulated__c</fullName>
        <formula>ISNULL( Tutor__r.Email ) = FALSE</formula>
        <label>Tutor Email Populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Graduate Tutor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>GetFurther_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tutorial_Topic__c</fullName>
        <label>Tutorial Topic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Subject__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lesson 1 - Retrieval and Inference</fullName>
                </value>
                <value>
                    <fullName>Lesson 2 - Inference</fullName>
                </value>
                <value>
                    <fullName>Lesson 3 - Using supporting quotations</fullName>
                </value>
                <value>
                    <fullName>Lesson 4 - Supporting quotations</fullName>
                </value>
                <value>
                    <fullName>Lesson 5 - Sentence structure</fullName>
                </value>
                <value>
                    <fullName>Lesson 6 - Sentence structure commas</fullName>
                </value>
                <value>
                    <fullName>Lesson 7 - 19th century texts</fullName>
                </value>
                <value>
                    <fullName>Lesson 8 - Sensory language</fullName>
                </value>
                <value>
                    <fullName>Lesson 9 - Sensory language 2</fullName>
                </value>
                <value>
                    <fullName>Lesson 10 - Repetition</fullName>
                </value>
                <value>
                    <fullName>Lesson 11 - Structure analysis</fullName>
                </value>
                <value>
                    <fullName>Lesson 12 - Figurative language</fullName>
                </value>
                <value>
                    <fullName>Lesson 13 - Evaluation</fullName>
                </value>
                <value>
                    <fullName>Lesson 14 - Walkthrough mock exam - Paper 1 Section A</fullName>
                </value>
                <value>
                    <fullName>Lesson 15 - Setting</fullName>
                </value>
                <value>
                    <fullName>Lesson 16 - Character</fullName>
                </value>
                <value>
                    <fullName>Lesson 17 - Structuring a story</fullName>
                </value>
                <value>
                    <fullName>Lesson 18 - Walkthrough mock exam - Paper 1 Section B</fullName>
                </value>
                <value>
                    <fullName>Lesson 19 - Summary</fullName>
                </value>
                <value>
                    <fullName>Lesson 20 - Writer&apos;s attitude</fullName>
                </value>
                <value>
                    <fullName>Lesson 21 - Comparison</fullName>
                </value>
                <value>
                    <fullName>Lesson 22 - Walkthrough mock exam - Paper 2 Section A</fullName>
                </value>
                <value>
                    <fullName>Lesson 23 - Transactional writing</fullName>
                </value>
                <value>
                    <fullName>Lesson 24 - Transactional writing 2</fullName>
                </value>
                <value>
                    <fullName>Lesson 25 - Walkthrough mock exam - Paper 2 Section B</fullName>
                </value>
                <value>
                    <fullName>Lesson 1 - Prime factors</fullName>
                </value>
                <value>
                    <fullName>Lesson 2 - Highest common factors and lowest common multiples</fullName>
                </value>
                <value>
                    <fullName>Lesson 3 - Basic fraction skills</fullName>
                </value>
                <value>
                    <fullName>Lesson 4 - Comparing and ordering fractions</fullName>
                </value>
                <value>
                    <fullName>Lesson 5 - Negative numbers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>time_till_session__c</fullName>
        <formula>FLOOR((Session_Date__c - Now()) * 24) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Till Session (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Session_Date__c</columns>
        <columns>Subject__c</columns>
        <columns>Tutorial_Topic__c</columns>
        <columns>Tutor__c</columns>
        <columns>TuitionGroup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Sessions</fullName>
        <columns>NAME</columns>
        <columns>TutorEmailPopulated__c</columns>
        <columns>Subject__c</columns>
        <columns>SessionTutor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SessionToday__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Today&apos;s Sessions</label>
    </listViews>
    <nameField>
        <label>GetFurther Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>